src/objects/Apttus_Config2__ProductDefaultRule__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__CriteriaFieldNames__c</fullName>
        <description>The list of field names used in the rule criteria</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Criteria Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Criteria__c</fullName>
        <description>The rule criteria specification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the rule</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The rule effective date. The rule becomes effective on this date and time.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The rule expiration date. The rule becomes ineffective after this date and time.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FilterLogic__c</fullName>
        <description>The default filter logic expression</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteriaFieldName__c</fullName>
        <description>The rule inclusion criteria field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inclusion Criteria Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteriaFieldValue__c</fullName>
        <description>The rule inclusion criteria value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inclusion Criteria Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>